chg: made query document changes
